test/classes/errors/nilability-init-var/init-var-oknil-unmanaged-from-oknil-owned.good
init-var-oknil-unmanaged-from-oknil-owned.chpl:9: error: cannot assign to unmanaged MyClass? from owned MyClass?
